[tool.poetry]
name = "epubwebsite"
version = "0.1.0"
description = ""
authors = ["Juan Carlos Corona Romero <c@rlos.email>"]

[tool.poetry.dependencies]
python = "^3.10"
EbookLib = "^0.17.1"
lxml = "^4.9.1"
Mako = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
